# ultraweak-reactive-transport

./: CMakeLists.txt  README.md  config.h.cmake  default.opts  dune-ultraweak.pc.in  dune.module
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/ultraweak/: CMakeLists.txt  constraints.hh  dgsolver.hh  fullBlockInvert.hh  masslumping.hh  reconstruction.hh  refinementadapter.hh  schurcomplement.hh  solvingManager.hh  testutil.hh
dune/ultraweak/darcy-velocity/: catalysatorProblems.hh  darcyMixedSolver.hh  darcyProblem.hh
dune/ultraweak/test/: CMakeLists.txt  conv_test_parameters.ini  convergence_test_yasp.cc  debug_parameters.ini  problems.hh  solve_darcy_mixed.cc  solve_transport_dg.cc  solve_transport_normal_eq.cc  solve_transport_normal_eq.hh  solver_config.ini
dune/ultraweak/transport/: discreteGridFunctionTransportDiffOp.hh  normalEqLocalOperator.hh  normalEqSolver.hh
